--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -3,6 +3,8 @@
     <h1>Compose</h1>
     <form class="" action="/compose" method="post">
       <div class="form-group">
+        <label>Date</label>
+        <input class="form-control" type="date" name="postDate">
         <label>Title</label>
         <input class="form-control" type="text" name="postTitle">
         <label>Post</label>
