--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -5,6 +5,13 @@
       <div class="form-group">
         <label>Date</label>
         <input class="form-control" type="date" name="postDate">
+        <label>Category</label>
+        <input class="form-control" type="text" name="postCategory" list="Listname">
+        <datalist id="Listname">
+          <option value="1">Space Science and Technology</option>
+          <option value="2">Buisness Politics and World</option>
+          <option value="3">Sports and Entertainment</option>
+        </datalist>
         <label>Title</label>
         <input class="form-control" type="text" name="postTitle">
         <label>Post</label>
