--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,21 +4,31 @@
 <head>
   <meta charset="utf-8">
   <title>Daily Journal</title>
-  <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
         <p class="navbar-brand">DAILY JOURNAL</p>
       </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li id="home"><a href="/">HOME</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
-          <li id="compose"><a href="/compose">COMPOSE BLOG</a></li>
-        </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li id="home"><a href="/">HOME</a></li>
+        <li id="about"><a href="/about">ABOUT US</a></li>
+        <li id="compose"><a href="/compose">COMPOSE BLOG</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CATEGORIES <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li id="science"><a href="/science">Space Science and Technology</a></li>
+            <li id="buisness"><a href="/buisness">Buisness and Politics</a></li>
+            <li id="sports"><a href="/sports">Sports and Entertainment</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </nav>
+</head>
 
-  <body>
-    <div class="container">
+<body>
+  <div class="container">
