--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header"); -%>
 
   <h1><%=title%></h1>
+  <h6><%=category%></h6>
   <h4><%=content%></h4>
   <p><%=date%></p>
 
